<resources>
    <string name="app_name">Canada EarthQuake</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="magnitude_text">Magnitude :</string>
    <string name="from_text">From       :</string>
    <string name="to_text">To         :</string>
    <string name="location_text">Location   :</string>
    <string name="title_activity_google_map">GoogleMap</string>
    <string name="title_activity_earth_qlist_view">EarthQListView</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_list_earth_q">Earthquakes list</string>
    <string name="ColorGreen">#00FF00</string>
    <string name="title_activity_tap">TapActivity</string>
    <string name="title_activity_tab_view">TabViewActivity</string>
    <string name="title_activity_gmap">GMapActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_test">test</string>
    <string name="main_action_menu_refresh">Refresh</string>
    <string name="origin_time_txt">Origin Time</string>
    <string name="detail_magnitude_txt">Magnitude</string>
    <string name="detail_location_txt">location</string>
    <string name="detial_latitude_txt">detail_latitude_txt</string>
    <string name="filter_btn_txt">Filter</string>
</resources>
